Fix overlapping border in LM image and videos

--- a/assets/css/3rd-party/themes/course/learning-mode.scss
+++ b/assets/css/3rd-party/themes/course/learning-mode.scss
@@ -34,7 +34,7 @@ body {
 		background-color: var(--border-color);
 	}
 
-	.wp-block-image, .wp-block-video {
+	.wp-block-image img, .wp-block-video video {
 		border-radius: 4px;
 		border: 1px solid var(--wp--preset--color--foreground);
 	}
